examples/LexActivator.h

    typedef const wchar_t* CSTRTYPE;
    typedef wchar_t* STRTYPE;
    typedef const char* CSTRTYPE;
    typedef char* STRTYPE;
typedef void (LA_CC *CallbackType)(uint32_t);
#define LA_USER ((uint32_t)1)
#define LA_SYSTEM ((uint32_t)2)
#define LA_ALL_USERS ((uint32_t)3)
#define LA_IN_MEMORY ((uint32_t)4)
LEXACTIVATOR_API int LA_CC SetProductFile(CSTRTYPE filePath);
LEXACTIVATOR_API int LA_CC SetProductData(CSTRTYPE productData);
LEXACTIVATOR_API int LA_CC SetProductId(CSTRTYPE productId, uint32_t flags);
LEXACTIVATOR_API int LA_CC SetDebugMode(uint32_t enable);
LEXACTIVATOR_API int LA_CC SetCustomDeviceFingerprint(CSTRTYPE fingerprint);
LEXACTIVATOR_API int LA_CC SetLicenseKey(CSTRTYPE licenseKey);
LEXACTIVATOR_API int LA_CC SetLicenseUserCredential(CSTRTYPE email, CSTRTYPE password);
LEXACTIVATOR_API int LA_CC SetLicenseCallback(CallbackType callback);
LEXACTIVATOR_API int LA_CC SetActivationLeaseDuration(int64_t leaseDuration);
LEXACTIVATOR_API int LA_CC SetActivationMetadata(CSTRTYPE key, CSTRTYPE value);
LEXACTIVATOR_API int LA_CC SetTrialActivationMetadata(CSTRTYPE key, CSTRTYPE value);
LEXACTIVATOR_API int LA_CC SetAppVersion(CSTRTYPE appVersion);
LEXACTIVATOR_API int LA_CC SetReleaseVersion(CSTRTYPE releaseVersion);
LEXACTIVATOR_API int LA_CC SetReleasePublishedDate(uint32_t releasePublishedDate);
LEXACTIVATOR_API int LA_CC SetReleasePlatform(CSTRTYPE releasePlatform);
LEXACTIVATOR_API int LA_CC SetReleaseChannel(CSTRTYPE releaseChannel);
LEXACTIVATOR_API int LA_CC SetOfflineActivationRequestMeterAttributeUses(CSTRTYPE name, uint32_t uses);
LEXACTIVATOR_API int LA_CC SetNetworkProxy(CSTRTYPE proxy);
LEXACTIVATOR_API int LA_CC SetCryptlexHost(CSTRTYPE host);
LEXACTIVATOR_API int LA_CC SetTwoFactorAuthenticationCode(CSTRTYPE twoFactorAuthenticationCode);
LEXACTIVATOR_API int LA_CC SetCacheMode(uint32_t enable);
LEXACTIVATOR_API int LA_CC GetProductMetadata(CSTRTYPE key, STRTYPE value, uint32_t length);
LEXACTIVATOR_API int LA_CC GetProductVersionName(STRTYPE name, uint32_t length);
LEXACTIVATOR_API int LA_CC GetProductVersionDisplayName(STRTYPE displayName, uint32_t length);
LEXACTIVATOR_API int LA_CC GetProductVersionFeatureFlag(CSTRTYPE name, uint32_t *enabled, STRTYPE data, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseEntitlementSetName(STRTYPE name, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseEntitlementSetDisplayName(STRTYPE displayName, uint32_t length);
LEXACTIVATOR_API int LA_CC GetFeatureEntitlements(FeatureEntitlement* featureEntitlements, uint32_t length);
LEXACTIVATOR_API int LA_CC GetFeatureEntitlement(CSTRTYPE featureName, FeatureEntitlement* featureEntitlement);
LEXACTIVATOR_API int LA_CC GetLicenseMetadata(CSTRTYPE key, STRTYPE value, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseMeterAttribute(CSTRTYPE name, int64_t *allowedUses, uint64_t *totalUses, uint64_t *grossUses);
LEXACTIVATOR_API int LA_CC GetLicenseKey(STRTYPE licenseKey, uint32_t length);
LEXACTIVATOR_API int LA_CC GetLicenseAllowedActivations(int64_t *allowedActivations);
LEXACTIVATOR_API int LA_CC GetLicenseTotalActivations(uint32_t *totalActivations);
LEXACTIVATOR_API int LA_CC GetLicenseAllowedDeactivations(int64_t *allowedDeactivations);
LEXACTIVATOR_API int LA_CC GetLicenseTotalDeactivations(uint32_t *totalDeactivations);
LEXACTIVATOR_API int LA_CC GetLicenseCreationDate(uint32_t *creationDate);
LEXACTIVATOR_API int LA_CC GetActivationCreationDate(uint32_t *activationCreationDate);
LEXACTIVATOR_API int LA_CC GetActivationLastSyncedDate(uint32_t *activationLastSyncedDate);