c/LexTypes.h

#define BUFFER_SIZE_256 256
#define BUFFER_SIZE_4096 4096
#define MAX_METADATA_SIZE 100
    typedef wchar_t CHARTYPE;
    typedef char CHARTYPE;
typedef struct 
{
    CHARTYPE addressLine1[BUFFER_SIZE_256];
    CHARTYPE addressLine2[BUFFER_SIZE_256];
    CHARTYPE city[BUFFER_SIZE_256];
    CHARTYPE state[BUFFER_SIZE_256];
    CHARTYPE country[BUFFER_SIZE_256];
    CHARTYPE postalCode[BUFFER_SIZE_256];
} OrganizationAddress;
typedef struct 
{
    CHARTYPE featureName[BUFFER_SIZE_256];
    CHARTYPE featureDisplayName[BUFFER_SIZE_256];
    CHARTYPE value[BUFFER_SIZE_256];
    CHARTYPE baseValue[BUFFER_SIZE_256];
    int64_t expiresAt;
} FeatureEntitlement;
typedef struct
{
    CHARTYPE key[BUFFER_SIZE_256];
    CHARTYPE value[BUFFER_SIZE_4096];
} Metadata;
typedef struct
{
    int64_t allowedActivations;
    int64_t allowedDeactivations;
    CHARTYPE key[BUFFER_SIZE_256];
    uint32_t totalActivations;
    uint32_t totalDeactivations;
    CHARTYPE type[BUFFER_SIZE_256];
    Metadata metadata[MAX_METADATA_SIZE];
} UserLicense;